Disabled arrow keys

--- a/config.toml
+++ b/config.toml
@@ -12,3 +12,15 @@ enable = true
 
 [editor.indent-guides]
 render = true
+
+[keys.insert]
+up = "no_op"
+down = "no_op"
+left = "no_op"
+right = "no_op"
+
+[keys.normal]
+up = "no_op"
+down = "no_op"
+left = "no_op"
+right = "no_op"
